--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+  /* Hide scrollbar for Firefox */
+  scrollbar-width: none;
+  /* Hide scrollbar for IE/Edge */
+  -ms-overflow-style: none;
+}
+
 body {
   scroll-behavior: smooth;
+}
+
+/* Hide scrollbar for Chrome, Safari, and Edge (Chromium) */
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  display: none;
+}
+
+body.custom-cursor-active,
+body.custom-cursor-active * {
+  cursor: none !important;
 }
 
 @layer base {
